# QT

./: README.md
ConvertHTML/: CMakeLists.txt  advancedconverter.cpp  advancedconverter.h  basicconverter.cpp  basicconverter.h  converterbase.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_webengine.cpp
Formul/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  taskmodel.cpp  taskmodel.h
Function/: CMakeLists.txt  formul.cpp  formul.h  inverse.cpp  inverse.h  logarithmic.cpp  logarithmic.h  mainwindow.h  mainwindow.ui  plotbuilder.cpp  plotbuilder.h  plotbuilderworker.cpp  plotbuilderworker.h  pointscollection.cpp  pointscollection.h  quadratic.cpp  quadratic.h  trigonometric.cpp  trigonometric.h
calculator/: mainwindow.cpp  mainwindow.h  mainwindow.ui
